--- a/font/index.html
+++ b/font/index.html
@@ -18,7 +18,9 @@
                 <a href="#" class="menu-item">Servicios</a>
                 <a href="font/index.html" class="menu-item">Contacto</a>
             </div>
-
+        </div>
+        <div>
+            <img src="recursos/fondo_inicio.jpg" alt="fondo_inicio">
         </div>
     </body>
 </html>
