--- a/font/index.html
+++ b/font/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div>
-            <img src="recursos/fondo_inicio.jpg" alt="fondo_inicio">
+            <img src="recursos/fondo_inicio.jpg" alt="fondo_inicio" width="auto">
         </div>
     </body>
 </html>
