--- a/font/index.html
+++ b/font/index.html
@@ -19,8 +19,8 @@
                 <a href="font/index.html" class="menu-item">Contacto</a>
             </div>
         </div>
-        <div>
-            <img src="recursos/fondo_inicio.jpg" alt="fondo_inicio" width="auto">
+        <div class="contenido_1">
+            <img src="recursos/fondo_inicio.jpg" alt="fondo_inicio" width="100%"  height="100%">
         </div>
     </body>
 </html>
