todo puede que explote

--- a/font/index.html
+++ b/font/index.html
@@ -2,25 +2,39 @@
 <html lang="en">
         <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="CSSs/prins.css">
         <link rel="stylesheet" href="CSSs/cavecera.css">
-    </head>
+        <link rel="stylesheet" href="CSSs/index.css">
+        <link rel="stylesheet" href="CSSs/prins.css">
+        <link rel="stylesheet" href="iniciosecion.css">
+
     <body>
+
         <div class="cabecera">
             <img src="recursos/logo_texto.png" alt="logo_texto" style="width: 200px;">
             <div  class="menu-barra">
-                <a href="#" class="menu-item">Inicio</a>
+                <a href="index.html" class="menu-item">Inicio</a>
                 <a href="#" class="menu-item">Nosotros</a>
                 <a href="#" class="menu-item">Servicios</a>
-                <a href="font/index.html" class="menu-item">Contacto</a>
+                <a href="iniciosesion.html" class="menu-item">Contacto</a>
+                <a href="camino.html" class="menu-item">armado</a>
             </div>
         </div>
+
+
+
+
         <div class="contenido_1">
-            <img src="recursos/fondo_inicio.jpg" alt="fondo_inicio" width="100%"  height="100%">
-        </div>
+          <a href="camino.html" class="botom">empezar</a>
+          <div class="news">
+              <p>
+          </div>
+      </div>
+
+        <div class="pie">
+          <p>ag  dw</p><hr> <p>dwa</p> <hr> <p>aw</p>
+      </div>
     </body>
 </html>
