--- a/font/camino.html
+++ b/font/camino.html
@@ -37,7 +37,7 @@
             </div>
         </a>
         <a href="">
-            <div href="silesabe.html" class="scale-up-top-right" class="botom">
+            <div href="silesabe.html"  class="botom">
                 poseo experiencia
                 <p><br>te daremos las herrameinta para <br> facilitarte la tarea de armar la pc que deseas </p>
             </div>
