--- a/font/index.html
+++ b/font/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
         <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +19,7 @@
                 <a href="index.html" class="menu-item">Inicio</a>
                 <a href="#" class="menu-item">Nosotros</a>
                 <a href="#" class="menu-item">Servicios</a>
-                <a href="iniciosesion.html" class="menu-item">Contacto</a>
+                <a href="iniciosesion.html" class="menu-item">iniciar sesion</a>
                 <a href="camino.html" class="menu-item">armado</a>
             </div>
         </div>
@@ -27,12 +28,16 @@
 
 
         <div class="contenido_1">
-          <a href="camino.html" class="botom">empezar</a>
-          <div class="news">
-              <p>
-          </div>
-      </div>
-
+            <div class="imagen_con_boton">
+                <img src="recursos/fondo_inicio.jpg" alt="fondo_inicio">
+                <a href="camino.html">
+                <h1 class="botom" >empezar</h1>
+            </a>
+            <div class="news">
+            </div>
+              <p></p>
+            </div>
+        </div>
         <div class="pie">
           <p>ag  dw</p><hr> <p>dwa</p> <hr> <p>aw</p>
       </div>
